examples/test/testpolicy10689.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10689
  namespace: namespace413
spec:
  podSelector:
    matchLabels:
      key17: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value28
          key2: value13
          key24: value2
      podSelector:
        matchLabels:
          key46: value28
